<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rob</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="butt_up">Вперед</string>
    <string name="butt_down">Назад</string>
    <string name="Butt_left">Влево</string>
    <string name="Butt_right">Вправо</string>
    <string name="logs">NULL</string>
    <string name="speed">Скорость</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="out_speed">10</string>
    <string name="call">Сигнал</string>
    <string name="signal">Сигнал</string>
    <color name="green">#005555</color>
    <color name="red">#551500</color>
    <string name="automatic">Автопилот</string>
    <string name="autop">автопилот</string>

</resources>
